--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+docs/.vitepress/dist
+docs/.vitepress/cache
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
